[project]
name = "do-until"
version = "0.1.0"
description = "Run a command for a specific time period."
readme = "README.md"
authors = [
    { name = "Sheldon McGrandle", email = "developer@8cylinder.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "dateparser>=1.2.1",
    "mypy>=1.15.0",
    "pip>=25.0.1",
    "rich>=14.0.0",
    "ruff>=0.11.6",
]

[project.scripts]
do-until = "do_until:cli.main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
